# Norvi_SmartPlug_SMP-R11_ESP-IDF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/ADE9153/: ADE9153.c  CMakeLists.txt  Kconfig  Kconfig.ADE9153  README.md
components/ADE9153/include/: ADE9153.h
components/common_variable_handler/: CMakeLists.txt  Kconfig  Kconfig.CVH  common_variable_handler.c
components/common_variable_handler/include/: common_variable_handler.h
components/display/: CMakeLists.txt  Kconfig  display.c
components/display/include/: display.h
components/display_ssd1306/: CMakeLists.txt  display_ssd1306.cpp
components/electricity_relay/: CMakeLists.txt  Kconfig  Kconfig.ELECTRICITY_RELAY  electricity_relay.c
components/electricity_relay/include/: electricity_relay.h
components/fatfs_storage/: CMakeLists.txt  Kconfig  fatfs_storage.cpp
components/fatfs_storage/include/: fatfs_storage.h
components/led_ws2812/: CMakeLists.txt  led_ws2812.c
components/led_ws2812/include/: led_ws2812.h
components/modem_interface/: CMakeLists.txt  Kconfig  Kconfig.MODEM_INTERFACE  modem_interface.c
components/modem_interface/include/: modem_interface.h
components/modem_interface/modem_api/: modem_api.c  modem_api.h
components/mqtt_interface/: CMakeLists.txt  Kconfig  mqtt_interface.c
components/mqtt_interface/include/: mqtt_interface.h
components/nvs_storage/: CMakeLists.txt  Kconfig  nvs_storage.cpp
components/nvs_storage/include/: nvs_storage.h
components/thingsboard_interface/: CMakeLists.txt  Kconfig  thingsboard_interface.c
components/thingsboard_interface/include/: thingsboard_interface.h
components/time_manager/: CMakeLists.txt  Kconfig  time_manager.cpp
components/time_manager/include/: time_manager.h
components/touch_button/: CMakeLists.txt  Kconfig  Kconfig.TOUCH_BUTTON  touch_button.c
components/touch_button/include/: touch_button.h
components/uart_forwarder/: CMakeLists.txt  Kconfig  Kconfig.UART_FORWARDER  uart_forwarder.c
components/uart_forwarder/include/: uart_forwarder.h
components/wifi_handler/: CMakeLists.txt  Kconfig  wifi_handler.c  wifi_handler.cpp
components/wifi_handler/include/: wifi_handler.h  wifi_handler.hpp
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.cpp  thingsboard_interface.cpp  thingsboard_interface.h
